2012-12-10  Benjamin Kosnik  <bkoz@redhat.com>

	* doc/Makefile.am (xml_sources_manual): Add
	policy_data_structures_biblio.xml.
	(${docbook_outdir}/latex): Add.
	(doc-xml-validate-docbook): Split into..
	(doc-xml-validate-dtd-db):... this for DTD.
	(doc-xml-validate-rng-db):... this for Relax NG.
	(doc-pdf-docbook-dirs): Add.
	(doc-pdf-docbook-pre): Add.
	* doc/xml/manual/build_hacking.xml: Add literal markup.
	* doc/xml/manual/documentation_hacking.xml: Clean whitespace in
	<filename> markup. Add notes about debugging the generation process.
	* doc/xml/manual/policy_data_structures.xml: Split biblio into...
	* doc/xml/manual/policy_data_structures_biblio.xml: ... this. New.
	* doc/xml/manual/test_policy_data_structures.xml: Fixup <filename>
	markup.

2012-12-10  Matthias Klose  <doko@ubuntu.com>

	* src/Makefile.am (libstdc++-symbols.ver): Use CONFIG_HEADER.
	* src/Makefile.in: Regenerate.

2012-12-09  Andreas Schwab  <schwab@linux-m68k.org>

	* testsuite/lib/libstdc++.exp (dg-test): Unset testname_with_flags
	after running the test.

2012-12-04  Andreas Schwab  <schwab@linux-m68k.org>

	* include/Makefile.am (${host_builddir}/c++config.h): Replace
	[<space><tab>] by [<tab><space>].
	* include/Makefile.in: Regenerate.

2012-12-04  Steven Bosscher  <steven@gcc.gnu.org>

	* include/Makefile.am: Fix regexp broken by previous commit.
	* include/Makefile.in: Likewise.

2012-12-03  Benjamin Kosnik  <bkoz@redhat.com>

	* include/ext/pb_ds/detail/cc_hash_table_map_/standard_policies.hpp:
	Remove.
	* include/ext/pb_ds/detail/gp_hash_table_map_/standard_policies.hpp:
	Remove.
	* include/Makefile.am (pb_headers): Remove include files.
	* include/Makefile.in: Regenerated.

2012-12-01  John David Anglin  <dave.anglin@nrc-cnrc.gc.ca>

	PR libstdc++/55503
	* testsuite/30_threads/condition_variable/members/53841.cc: Add
	hppa*-hp-hpux11* to -pthread dg-options.

2012-11-29  Kai Tietz  <ktietz@redhat.com>

	PR target/55445