@@ -1,3 +1,11 @@
+2012-12-11  Jonathan Wakely  <jwakely.gcc@gmail.com>
+
+	PR libstdc++/55631
+	* include/ext/alloc_traits.h: Include missing header.
+	* include/ext/pointer.h: Likewise.
+	* include/ext/string_conversions.h: Require C++11.
+	* libsupc++/initializer_list: Reindent.
+
 2012-12-10  Benjamin Kosnik  <bkoz@redhat.com>
 
 	* doc/Makefile.am (xml_sources_manual): Add
